--- a/static/css/index.css
+++ b/static/css/index.css
@@ -21,6 +21,10 @@ figure{
 	background: linear-gradient(25deg,violet,pink);
 }
 
+#url_submit{
+	position: relative;
+    /*left: -3.8%;*/
+}
 figure h1 {
 	position: absolute;
 	top: 7vh;
@@ -64,6 +68,7 @@ figure section{
     top: 140%;
     margin-top: -25vh;
     margin-left: -10vw;
+	transition: 1s;
 }
 figure section article{
     width: 100%;
@@ -203,4 +208,127 @@ figure section article .inner .pic.on::after{
 }
 figure section article .inner .pic.on::before{
 	animation: ani2 4s linear infinite;
+}
+
+figure .btnPrev{
+	width: 60px;
+	height: 60px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-20vw,50%);
+	display: flex;
+	align-items: center;
+	text-align: left;
+	cursor: pointer;
+}
+figure .btnPrev span{
+	font-size: 11px;
+	color: #fff;
+	opacity: 1;
+	transform: translateX(30%);
+	transition: 0.5s;
+}
+
+figure .btnPrev::before{
+	content: "";
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #fff;
+	position: absolute;
+	top: 50%;
+	left: 0px;
+	transform-origin: left center;
+	transform: rotate(-180deg);
+	transition: 0.5s;
+}
+
+figure .btnPrev::after{
+	content: "";
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #fff;
+	position: absolute;
+	bottom: 50%;
+	left: 0px;
+	transform-origin: left center;
+	transform:rotate(180deg);
+	transition: 0.5s;
+}
+figure.btnPrev:hover span{
+	opacity: 0;
+	transform: translateX(100%);
+}
+
+figure .btnPrev:hover::before{
+	transform: rotate(-30deg);
+}
+figure .btnPrev:hover::after{
+	transform: rotate(30deg);
+}
+figure .btnNext{
+	width: 60px;
+	height: 60px;
+	position: absolute;
+	top: 50%;
+	right: 50%;
+	transform: translate(20vw,-50%);
+	display: flex;
+	align-items: center;
+	text-align: right;
+	cursor: pointer;
+}
+
+figure .btnNext span{
+	font-size: 11px;
+	color: #fff;
+	opacity: 1;
+	transform: translateX(-30%);
+	transition: 0.5s;
+}
+
+figure .btnNext::before{
+	content: "";
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #fff;
+	position: absolute;
+	top: 50%;
+	left: 0px;
+	transform-origin: right center;
+	transform: rotate(180deg);
+	transition: 0.5s;
+}
+figure .btnNext::after{
+	content: "";
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #fff;
+	position: absolute;
+	bottom: 50%;
+	left: 0px;
+	transform-origin: right center;
+	transform: rotate(-180deg);
+	transition: 0.5s;
+}
+
+figure .btnNext:hover span{
+	opacity: 0;
+	transform: translateX(-100%);
+}
+
+figure .btnNext:hover::before{
+	transform: rotate(30deg);
+}
+figure .btnNext:hover::after{
+	transform: rotate(-30deg);
+}
+
+.input-group{
+	width: 50%;
+	float: left;
 }
