--- a/static/css/index.css
+++ b/static/css/index.css
@@ -22,9 +22,23 @@ figure{
 }
 
 #url_submit{
-	position: relative;
-    /*left: -3.8%;*/
+	position: absolute;
+    top: 0vh;
+    right: 27vw;
+    background: #ac67c0;
+    border: none;
+    padding: 0.84%;
+    border-radius: 0;
+    box-shadow: 2px 4px 7px #c059dc;
 }
+
+#music_url{
+	border-radius: 0px;
+}
+#music_url::placeholder{
+	color: gray;
+}
+
 figure h1 {
 	position: absolute;
 	top: 7vh;
@@ -43,6 +57,12 @@ figure h1 span{
 	line-height: 1.4;
 	letter-spacing: 1px;
 }
+#url_area{
+ 	position: absolute;
+    top: 87vh;
+    left: 32vw;
+    width: 62%;
+}
 figure .menu{
 	position: absolute;
 	top: 8vh;
@@ -52,7 +72,7 @@ figure .menu{
 }
 figure>p{
 	position: absolute;
-	bottom: 7vh;
+	bottom: 1vh;
 	left: 50%;
 	transform: translateX(-50%);
 	color: #fff;
@@ -214,7 +234,7 @@ figure .btnPrev{
 	width: 60px;
 	height: 60px;
 	position: absolute;
-	top: 50%;
+	top: 43%;
 	left: 50%;
 	transform: translate(-20vw,50%);
 	display: flex;
@@ -257,11 +277,11 @@ figure .btnPrev::after{
 	transform:rotate(180deg);
 	transition: 0.5s;
 }
-figure.btnPrev:hover span{
-	opacity: 0;
-	transform: translateX(100%);
-}
 
+figure .btnPrev:hover span{
+	opacity: 0;
+	transform: translateX(-100%);
+}
 figure .btnPrev:hover::before{
 	transform: rotate(-30deg);
 }
